[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/03_game/biome_dark/images/IMG_0854.PNG" type="Texture" id=1]
[ext_resource path="res://scenes/03_game/biome_dark/images/IMG_0858.PNG" type="Texture" id=2]
[ext_resource path="res://scenes/03_game/biome_dark/images/IMG_0855.PNG" type="Texture" id=3]
[ext_resource path="res://scenes/03_game/biome_dark/images/IMG_0856.PNG" type="Texture" id=4]
[ext_resource path="res://scenes/03_game/biome_dark/images/IMG_0857.PNG" type="Texture" id=5]
[ext_resource path="res://scenes/03_game/biome_dark/BiomeDark.gd" type="Script" id=6]
[ext_resource path="res://scenes/03_game/biome_dark/images/IMG_0853.PNG" type="Texture" id=7]
[ext_resource path="res://scenes/03_game/biome_dark/images/IMG_0859.PNG" type="Texture" id=8]
[ext_resource path="res://components/ParallaxSprite.gd" type="Script" id=9]
[ext_resource path="res://scenes/03_game/biome_dark/lightning/IMG_0880.PNG" type="Texture" id=10]
[ext_resource path="res://scenes/03_game/biome_dark/lightning/IMG_0883.PNG" type="Texture" id=11]
[ext_resource path="res://scenes/03_game/biome_dark/lightning/IMG_0886.PNG" type="Texture" id=12]
[ext_resource path="res://scenes/03_game/biome_dark/lightning/IMG_0881.PNG" type="Texture" id=13]
[ext_resource path="res://scenes/03_game/biome_dark/lightning/IMG_0882.PNG" type="Texture" id=14]
[ext_resource path="res://scenes/03_game/biome_dark/lightning/IMG_0884.PNG" type="Texture" id=15]
[ext_resource path="res://scenes/03_game/biome_dark/lightning/IMG_0885.PNG" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "Parallax"
length = 600.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Clouds:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 597.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3840, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dust:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 537.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3840, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 462.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3840, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Mountains1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 394.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3840, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Mountains2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 323.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3840, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Clouds:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3840, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dust:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3840, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3840, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Mountains1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3840, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Mountains2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3840, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiddleGround:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3840, 0 ) ]
}

[node name="BiomeDark" type="Node2D"]
script = ExtResource( 6 )

[node name="Sky" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="Clouds" type="Sprite" parent="."]
position = Vector2( -3840, 0 )
texture = ExtResource( 1 )
centered = false

[node name="Dust" type="Sprite" parent="."]
position = Vector2( -3840, 0 )
texture = ExtResource( 3 )
centered = false

[node name="Light" type="Sprite" parent="."]
position = Vector2( -3840, 0 )
texture = ExtResource( 4 )
centered = false

[node name="Mountains1" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.301961 )
position = Vector2( -3840, 0 )
texture = ExtResource( 5 )
centered = false

[node name="Mountains2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.4 )
position = Vector2( -3840, 0 )
texture = ExtResource( 2 )
centered = false

[node name="Lightning" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
centered = false

[node name="MiddleGround" type="Sprite" parent="."]
position = Vector2( -3840, 0 )
texture = ExtResource( 8 )
centered = false
script = ExtResource( 9 )
time = 90

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Parallax = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="LightningTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="animation_finished" from="Lightning" to="." method="_on_Lightning_animation_finished"]
[connection signal="timeout" from="LightningTimer" to="." method="_on_Timer_timeout"]
